--- a/building.css
+++ b/building.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
 .b1 {
   display: flex;
   width: 1440px;
@@ -238,7 +239,7 @@
 }
 .home2-img .img2 {
   position: relative;
-  left: 70px;
+  left: 470px;
   bottom: 125px;
   width: 240px;
   height: 160px;
@@ -285,4 +286,715 @@
   font-weight: 500;
   line-height: normal;
   color: #222;
+}
+.ps {
+  display: flex;
+  gap: 91px;
+}
+.ps p {
+  color: #555;
+  width: 229px;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.now {
+  width: 169px;
+  height: 56px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background-color: #19bce4;
+}
+.now p {
+  color: #fff;
+  font-family: Rubik;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  padding: 16px 32px;
+}
+.glav-office {
+  background-color: #f8fdfe;
+}
+.office {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 800px;
+  flex-shrink: 0;
+  margin: auto;
+  gap: 68px;
+}
+.office h1 {
+  font-family: Rubik;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60.9px;
+  color: #222;
+}
+.img-texts {
+  display: flex;
+  gap: 51px;
+}
+.text-office {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.text-office-1,
+.text-office-2,
+.text-office-3,
+.text-office-4 {
+  display: flex;
+  width: 541px;
+  height: 118px;
+  flex-shrink: 0;
+  border: 0.5px solid rgba(25, 188, 228, 0.2);
+  background-color: #fff;
+}
+#office-icon-1 {
+  margin: 28px;
+  width: 56px;
+  height: 56px;
+  flex-shrink: 0;
+  color: #19bce4;
+}
+.text-office-1 h3 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #222;
+}
+.text-office-1 p {
+  color: #555;
+  width: 360px;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+#office-icon-2 {
+  margin: 28px;
+  width: 56px;
+  height: 56px;
+  flex-shrink: 0;
+  color: #19bce4;
+}
+.text-office-2 h3 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #222;
+}
+.text-office-2 p {
+  color: #555;
+  width: 360px;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+#office-icon-3 {
+  margin: 28px;
+  width: 56px;
+  height: 56px;
+  flex-shrink: 0;
+  color: #19bce4;
+}
+.text-office-3 h3 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #222;
+}
+.text-office-3 p {
+  color: #555;
+  width: 360px;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+#office-icon-4 {
+  margin: 28px;
+  width: 56px;
+  height: 56px;
+  flex-shrink: 0;
+  color: #19bce4;
+}
+.text-office-4 h3 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: #222;
+}
+.text-office-4 p {
+  color: #555;
+  width: 360px;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+.places {
+  width: 80%;
+  height: 800px;
+  flex-shrink: 0;
+  margin: auto;
+}
+.places h1 {
+  font-family: Rubik;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60.9px;
+  color: #222;
+  margin: auto;
+  text-align: center;
+  margin-top: 120px;
+}
+.places p {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  color: #555;
+  width: 517px;
+  margin: auto;
+  margin-top: 16px;
+}
+.each {
+  display: flex;
+  gap: 30px;
+  margin-top: 40px;
+}
+.J-M-L-I {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.J-M {
+  display: flex;
+  gap: 30px;
+}
+.L-I {
+  display: flex;
+  gap: 30px;
+}
+.Bangladesh {
+  background-image: url("./Rectangle\ 2186.png");
+  width: 370px;
+  height: 540px;
+  flex-shrink: 0;
+}
+.Japan {
+  background-image: url("./Rectangle\ 2187.png");
+  width: 370px;
+  height: 255px;
+  flex-shrink: 0;
+}
+.Malaysia {
+  background-image: url("./Rectangle\ 2188.png");
+  width: 370px;
+  height: 255px;
+  flex-shrink: 0;
+}
+.London {
+  background-image: url("./Rectangle\ 2189.png");
+  width: 370px;
+  height: 255px;
+  flex-shrink: 0;
+}
+.India {
+  background-image: url("./Rectangle\ 2190.png");
+  width: 370px;
+  height: 255px;
+  flex-shrink: 0;
+}
+.Bangladesh .blur1 {
+  width: 200px;
+  height: 88px;
+  flex-shrink: 0;
+  margin: 340px 85px 112px 85px;
+  background: rgba(0, 96, 119, 0.02);
+  backdrop-filter: blur(14.5px);
+}
+.blur1 .p1 {
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  padding: 12px 32px 0px 32px;
+}
+.blur1 .p2 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin: 8px 37px 13px 37px;
+  color: #ddd;
+}
+.Japan .blur2 {
+  width: 200px;
+  height: 88px;
+  flex-shrink: 0;
+  margin: 143px 85px 24px 85px;
+  background: rgba(0, 96, 119, 0.02);
+  backdrop-filter: blur(14.5px);
+}
+.blur2 .p1 {
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  padding: 12px 64px 0px 63px;
+}
+.blur2 .p2 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin: 8px 37px 13px 37px;
+  color: #ddd;
+}
+.Malaysia .blur3 {
+  width: 200px;
+  height: 88px;
+  flex-shrink: 0;
+  margin: 143px 85px 24px 85px;
+  background: rgba(0, 96, 119, 0.02);
+  backdrop-filter: blur(14.5px);
+}
+.blur3 .p1 {
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  padding: 12px 50px 0px 50px;
+}
+.blur3 .p2 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin: 8px 37px 13px 37px;
+  color: #ddd;
+}
+.London .blur4 {
+  width: 200px;
+  height: 88px;
+  flex-shrink: 0;
+  margin: 143px 85px 24px 85px;
+  background: rgba(0, 96, 119, 0.02);
+  backdrop-filter: blur(14.5px);
+}
+
+.blur4 .p1 {
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  padding: 12px 56px 0px 57px;
+}
+.blur4 .p2 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin: 8px 37px 13px 37px;
+  color: #ddd;
+}
+.India .blur5 {
+  width: 200px;
+  height: 88px;
+  flex-shrink: 0;
+  margin: 143px 85px 24px 85px;
+}
+.blur5 {
+  background: rgba(0, 96, 119, 0.02);
+  backdrop-filter: blur(14.5px);
+}
+.blur5 .p1 {
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #fff;
+  padding: 12px 72px 0px 72px;
+}
+.blur5 .p2 {
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 27px;
+  margin: 8px 37px 13px 37px;
+  color: #ddd;
+}
+.man-woman {
+  display: flex;
+  margin-left: 135px;
+  width: 1440px;
+  height: 550px;
+  flex-shrink: 0;
+}
+#first-p {
+  width: 364px;
+  height: 28px;
+  flex-shrink: 0;
+  color: #e4e4e4;
+  font-family: Roboto;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+}
+.man-text h2 {
+  font-family: Rubik;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60.9px;
+  color: #222;
+}
+#second-p {
+  width: 596px;
+  color: #555;
+  font-family: Rubik;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+.button {
+  display: flex;
+  gap: 12px;
+  width: 190px;
+  height: 56px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background-color: #19bce4;
+}
+.button p {
+  color: #fff;
+  font-family: Rubik;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-left: 32px;px
+}
+.button svg {
+  margin-top: 16px;
+}
+.img-man-woman img {
+width: 673px;
+height: 550px;
+flex-shrink: 0;
+margin-left: 36px;
+}
+.man-3 {
+  width: 1440px;
+  height: 720px;
+  flex-shrink: 0;
+  background-color: #FFF8F7;
+}
+.man-3 h1 {
+  font-family: 'Noto Sans', sans-serif;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+color: #222;
+margin-left: 522px;
+padding-top: 96px;
+}
+.man-3 p {
+  font-family: Rubik;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 27px; 
+color: #555;
+margin-left: 532px;
+}
+.div-3 {
+  display: flex;
+  margin: auto;
+  width: 1200px;
+  gap: 30px;
+  background-color: #FFF8F7;
+  margin-top: 139px;
+}
+.div-3 div {
+  width: 370px;
+height: 280px;
+flex-shrink: 0;
+  background-color: #fff;
+}
+.div-3 img {
+  width: 144px;
+height: 144px;
+flex-shrink: 0;
+border-radius: 144px;
+}
+.first-man-img {
+  position: relative;
+}
+.first-man-img img {
+  position: absolute;
+  left: 113px;
+  bottom: 200px;
+} 
+.second-man-img {
+  position: relative;
+}
+.second-man-img img {
+  position: absolute;
+  left: 113px;
+  bottom: 200px;
+}
+.third-man-img {
+  position: relative;
+}
+.third-man-img img {
+  position: absolute;
+  left: 113px;
+  bottom: 200px;
+}
+.first-man {
+  position: relative;
+}
+.first-man h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+color: #222;
+text-align: center;
+position: absolute;
+bottom: 145px;
+left: 117px;
+}
+.second-man {
+  position: relative;
+}
+.second-man h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+color: #222;
+text-align: center;
+position: absolute;
+bottom: 145px;
+left: 117px;
+}
+.third-man {
+  position: relative;
+}
+.third-man h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+color: #222;
+text-align: center;
+position: absolute;
+bottom: 145px;
+left: 117px;
+}
+/* error */
+.stars-1 {
+  display: flex;
+  gap: 4px;
+  margin-left: 137px;
+  margin-bottom: 147px;
+  background-color: #FFF8F7;
+}
+.stars-1 img {
+  width: 16px;
+height: 16px;
+flex-shrink: 0;
+}
+.blue {
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+}
+.blue .mail {
+  width: 1152px;
+height: 251px;
+flex-shrink: 0;
+border-radius: 24px;
+background-color: #19BCE4;
+margin-left: 144px;
+margin-top: 120px;
+}
+.mail h1 {
+  font-family: Rubik;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+color: #fff;
+margin-left: 260px;
+padding-top: 48px;
+}
+.write-mail {
+  width: 720px;
+height: 64px;
+flex-shrink: 0;
+border-radius: 6px;
+background-color: #FFF;
+margin-left: 216px;
+margin-top: 40px;
+}
+.write-mail p {
+  font-family: Rubik;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+color: #555;
+padding: 24px 0px 35px 24px;
+}
+.button-blue {
+  width: 120px;
+height: 48px;
+flex-shrink: 0;
+border-radius: 6px;
+background-color: #19BCE4;
+margin-top: 10px;
+}
+.button-blue p {
+  font-family: Rubik;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 27px; 
+color: #fff;
+padding: 11px 22px 10px 23px;
+}
+.inn {
+  display: flex;
+  gap: 454px;
+}
+.inn p {
+  margin-bottom: 10px;
+}
+.end {
+  width: 1152px;
+  height: 400px;
+  display: flex;
+  gap: 45px;
+  margin: auto;
+}
+.yonma-yon {
+  display: flex;
+  gap: 6px;
+}
+.yonma-yon img {
+  width: 40px;
+height: 40px;
+flex-shrink: 0;
+margin-top: 8px;
+}
+.end-1 p {
+  width: 329px;
+color: #555;
+font-family: Rubik;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 27px;
+}
+.progs {
+  display: flex;
+  gap: 16px;
+  margin-top: 37px;
+}
+.progs img {
+  width: 24px;
+height: 24px;
+flex-shrink: 0;
+}
+.end-2 {
+  display: flex;
+  flex-direction: column; 
+}
+.end-2 h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.end-3 {
+  display: flex;
+  flex-direction: column; 
+}
+.end-3 h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.end-4 {
+  display: flex;
+  flex-direction: column; 
+}
+.end-4 h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.end-5 h2 {
+  font-family: Rubik;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
